--- a/Frontend/Available_Volunteers.html
+++ b/Frontend/Available_Volunteers.html
@@ -33,34 +33,40 @@
             background: #343a40 !important;
             top: 0;
         }
+
         .message-card {
             text-align: center;
             font-size: 2rem;
-            padding: 3rem; 
-            margin: 0 auto; 
+            padding: 3rem;
+            margin: 0 auto;
             min-height: 60vh;
             display: flex;
-            flex-direction: column; 
-            justify-content: center; 
-            align-items: center; 
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
+
         .phone-link {
-            text-decoration: none; 
-            font-weight: bold; 
+            text-decoration: none;
+            font-weight: bold;
             transition: color 0.3s ease;
         }
 
         .phone-link:hover {
             text-decoration: underline;
         }
+
         .email-link {
-            text-decoration: none; /* Remove underline from link */
-            font-weight: bold; /* Make the email address bold */
+            text-decoration: none;
+            /* Remove underline from link */
+            font-weight: bold;
+            /* Make the email address bold */
             transition: color 0.3s ease;
         }
 
         .email-link:hover {
-            text-decoration: underline; /* Underline on hover */
+            text-decoration: underline;
+            /* Underline on hover */
         }
     </style>
 </head>
@@ -69,7 +75,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Welfare</a>
+            <a class="navbar-brand" href="index_ngo.html">Welfare</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
                 aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span> Menu
@@ -140,14 +146,13 @@
                     }
                 });
                 const volunteers = await response.json();
-                if(response.status === 401)
-                {
+                if (response.status === 401) {
                     alert('Not authorised to access this route');
                     localStorage.clear();
                     window.location.assign('index.html');
                     return;
                 }
-                else if(response.status !== 200){
+                else if (response.status !== 200) {
                     alert(`Error: ${volunteers.message}`);
                     return;
                 }
@@ -157,7 +162,7 @@
 
                 if (volunteers.length === 0) {
                     const message = document.createElement('div');
-                    message.className = 'message-card'; 
+                    message.className = 'message-card';
                     message.textContent = 'No Pending Requests';
                     container.appendChild(message);
                     return;
@@ -184,63 +189,61 @@
             }
         }
 
-         document.addEventListener('DOMContentLoaded', fetchVolunteers);
+        document.addEventListener('DOMContentLoaded', fetchVolunteers);
     </script>
 
 
-    <footer class="ftco-footer ftco-section img" style="height: 25rem;">
+    <footer class="ftco-footer ftco-section img" style="height: auto; padding-bottom: 1rem;">
         <div class="overlay"></div>
         <div class="container">
             <div class="row mb-1">
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6 mb-4">
                     <div class="ftco-footer-widget mb-4">
                         <h2 class="ftco-heading-2">About Us</h2>
                         <p style="color: white;">We are dedicated to redistributing surplus food to those in need,
-                            minimizing waste, and
-                            helping our community. Learn more about our mission and how you can get involved.</p>
+                            minimizing waste,
+                            and helping our community. Learn more about our mission and how you can get involved.</p>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6 mb-4">
                     <div class="ftco-footer-widget mb-4" style="color: white; margin-left: 2rem;">
                         <h2 class="ftco-heading-2">Our Services</h2>
                         <ul class="list-unstyled">
-                            <li><span class="icon icon-check"></span> Collaboaration</li>
+                            <li><span class="icon icon-check"></span> Collaboration</li>
                             <li><span class="icon icon-check"></span> Support Network</li>
                             <li><span class="icon icon-check"></span> Volunteer Opportunities</li>
                             <li><span class="icon icon-check"></span> Community Interactions</li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6 mb-4">
                     <div class="ftco-footer-widget mb-4">
                         <h2 class="ftco-heading-2">Testimonials</h2>
                         <div class="block-21 mb-4 d-flex">
                             <div class="text">
                                 <h3 class="heading" style="color: white;">"This organization has changed my life!" -
-                                    Jane Doe
-                                </h3>
+                                    Jane Doe</h3>
                             </div>
                         </div>
                         <div class="block-21 mb-4 d-flex">
                             <div class="text">
                                 <h3 class="heading" style="color: white;">"Incredible impact on our community." - John
-                                    Smith
-                                </h3>
+                                    Smith</h3>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-6 mb-4">
                     <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Have a Questions?</h2>
+                        <h2 class="ftco-heading-2">Have a Question?</h2>
                         <div class="block-23 mb-3">
-                            <ul>
+                            <ul class="list-unstyled">
                                 <li><span class="icon icon-map-marker"></span><span class="text"
-                                        style="color: white;">203 Fake St. Mountain
-                                        View, San Francisco, California, USA</span></li>
+                                        style="color: white;">203 Fake St.
+                                        Mountain View, San Francisco, California, USA</span></li>
                                 <li><span class="icon icon-phone"></span><span class="text" style="color: white;">+2 392
-                                        3929
-                                        210</span></li>
+                                        3929 210</span>
+                                </li>
                                 <li><span class="icon icon-envelope"></span><span class="text"
                                         style="color: white;">info@yourdomain.com</span></li>
                             </ul>
